[tool.poetry]
name = "aws-eni-identifier"
version = "0.1.4"
description = "Identify to which AWS service network interface is associated"
authors = ["Eremin <haru.eaa@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_eni_identifier"}]
homepage = "https://github.com/fivexl/aws-eni-identifier"
repository = "https://github.com/fivexl/aws-eni-identifier"

[tool.poetry.scripts]
aws-eni-identifier = "aws_eni_identifier.cli:app"

[tool.poetry.dependencies]
python = "^3.9.0" # https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
glom = "^23.1.1"
typer = { extras = ["all"], version = "^0.7.0" }


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
faker = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
